--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-sample1",
+  "homepage": "https://kkgh.github.io/react-sample1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
